// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm Component Test Expects a default error message to be displayed when there is a 500 error 1`] = `
<div>
  <form
    data-testid="login-form"
  >
    <input
      data-testid="login-form-email"
      name="email"
      placeholder="Email"
      required=""
      type="email"
      value="someonefkjaskdfjfj@gmail.com"
    />
    <input
      data-testid="login-form-password"
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value="password"
    />
    <button
      type="submit"
    >
      Login
    </button>
    <div
      class="formError"
      data-testid="form-error-401"
    >
      Sorry, but the email/password combination you entered does not exist.
    </div>
  </form>
</div>
`;

exports[`LoginForm Component Test Expects a relevant error message to be displayed when no user is found 1`] = `
<div>
  <form
    data-testid="login-form"
  >
    <input
      data-testid="login-form-email"
      name="email"
      placeholder="Email"
      required=""
      type="email"
      value="someonefkjaskdfjfj@gmail.com"
    />
    <input
      data-testid="login-form-password"
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value="password"
    />
    <button
      type="submit"
    >
      Login
    </button>
    <div
      class="formError"
      data-testid="form-error-404"
    >
      Sorry, but there is no account registered with that email address.
    </div>
  </form>
</div>
`;

exports[`LoginForm Component Test Expects a relevant error message to be displayed when password is incorrect 1`] = `
<div>
  <form
    data-testid="login-form"
  >
    <input
      data-testid="login-form-email"
      name="email"
      placeholder="Email"
      required=""
      type="email"
      value="someonefkjaskdfjfj@gmail.com"
    />
    <input
      data-testid="login-form-password"
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value="password"
    />
    <button
      type="submit"
    >
      Login
    </button>
    <div
      class="formError"
      data-testid="form-error-401"
    >
      Sorry, but the email/password combination you entered does not exist.
    </div>
  </form>
</div>
`;

exports[`LoginForm Component Test Renders with correct default values from redux store 1`] = `
<div>
  <form
    data-testid="login-form"
  >
    <input
      data-testid="login-form-email"
      name="email"
      placeholder="Email"
      required=""
      type="email"
      value=""
    />
    <input
      data-testid="login-form-password"
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <button
      type="submit"
    >
      Login
    </button>
  </form>
</div>
`;
